NetworkPolicies/FillPolicy/pod-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webzeug    # Namen müssen DNS entprechen also kein _ : . etc.
  labels:
    dienst:   www
spec:
  containers:
  - name: meinserver
    image: erkules/nginxhostname:v1
