NetworkPolicies/FillPolicy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: www
spec: 
  selector:
    app: www
  ports:
  - port: 80
#   Es sind auch Umleitungen möglich 80 -> 8080
#   targetPort: 8080
