NetworkPolicies/FillPolicy/firstnetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: protectdeploy
  namespace: fillpolicy
spec:
  podSelector:
    matchLabels:
      <fill>
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          <fill>
    ports: 
    - port: 80
